--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,48 @@
 /.encore
+encore.gen.go
+encore.gen.cue
+/encore.gen
+
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, build output
+*.test
+*.out
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.cov
+
+# Dependency directories (remove the comment below if you use Go modules)
+vendor/
+
+# Go workspace file
+go.work
+
+# IDE/editor files
+.vscode/
+.idea/
+*.swp
+
+# Local environment files
+*.env
+
+# Docker
+*.env
+docker-compose.override.yml
+
+# Logs
+*.log
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# database/migrations
+* database/migrations/*.sql
+
