--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,5 @@ docker-compose.override.yml
 Thumbs.db
 
 # database/migrations - Ignore only SQL files within this directory
-/database/migrations/*.sql
+#/database/migrations/*.sql
 
